--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
+<style>
+    html { color-scheme: light dark; }
+    body { width: 38em; margin: 0 auto;
+    font-family: Tahoma, Verdana, Arial, sans-serif; }
+</style>
 <title>后禾呀的网页</title>
 </head>
 <body>
