--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head class="zyyo.net">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>个人网站</title>
+    <title>在下软酱捏</title>
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="整天半吊子和不学无术的坏孩子,梦想成为庄稼地里的读书人">
-    <meta name="keywords" content="张扬YO,ZYYO,张扬主页,ZYYO引导页,zhangyang">
-    <meta name="og:title" contect="张扬YO">
+    <meta name="keywords" content="在下软酱捏,Houheya,软酱主页,Houheya引导页,ruanjiang">
+    <meta name="og:title" contect="在下软酱捏">
     <meta name="og:type" contect="website">
     <meta property="og:locale" content="zh_CN">
     <meta name="og:image" contect="favicon.ico">
-    <meta name="og:url" contect="https://zyyo.net">
+    <meta name="og:url" contect="https://www.houheya.us.kg">
     <meta name="og:description" contect="整天半吊子和不学无术的坏孩子,梦想成为庄稼地里的读书人">
-    <meta name="og:site_name" contect="张扬YO">
+    <meta name="og:site_name" contect="在下软酱捏">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="/static/css/style.css?v=1.33">
 </head>
@@ -129,7 +129,7 @@
 
 
         <header> <!-- 头部开始 -->
-            <div class="welcome">Hello, I'm <span class="gradientText">houheya</span></div>
+            <div class="welcome">Hello, I'm <span class="gradientText">Houheya</span></div>
             <div class="description">👦 <span class="purpleText"> Full Stack</span> Developer
             </div>
             <div class="description">📝 The only way to do
