--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="iconTip">Github</div>
                 </a>
                 <!---->
-                <a class="iconItem" target="_blank" href="mailto:i@zyyo.net">
+                <a class="iconItem" target="_blank" href="mailto:admin@houheya.us.kg">
                     <svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" p-id="3174" width="22px" height="22px">
                         <path
@@ -301,11 +301,11 @@
             <div class="projectList">
                 <!-- 项目列表开始 -->
                 <!---->
-                <a class="projectItem" target="_blank" href="https://xtbbb.com/default/5.html">
+                <a class="projectItem" target="_blank" href="ghb.houheya.us.kg">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
-                        <h1>ZYYO主题</h1>
-                        <p>一款为我个人设计的丑陋主题</p>
+                        <h1>Github加速网站</h1>
+                        <p>加速Github文件下载</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i1.png" alt="">
@@ -313,11 +313,11 @@
                     <!-- 项目项结束 -->
                 </a>
                 <!---->
-                <a class="projectItem" target="_blank" href="https://xtbbb.com/default/10.html">
+                <a class="projectItem" target="_blank" href="gha.houheya.us.kg"">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
-                        <h1>ZYYO主页</h1>
-                        <p>一款闲来无事做的个人主页</p>
+                        <h1>Github镜像网站</h1>
+                        <p>不支持登录，建议使用上一个</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i2.png" alt="">
