--- a/index.html
+++ b/index.html
@@ -63,13 +63,10 @@
             </div>
             <div class="left-div left-tag">
                 <div class="left-tag-item">
-                    网瘾
+                    初中
                 </div>
                 <div class="left-tag-item">
-                    小学生
-                </div>
-                <div class="left-tag-item">
-                    大一
+                    初一
                 </div>
                 <div class="left-tag-item">
                     网页
@@ -78,13 +75,7 @@
                     跑者
                 </div>
                 <div class="left-tag-item">
-                    linux
-                </div>
-                <div class="left-tag-item">
-                    前端
-                </div>
-                <div class="left-tag-item">
-                    骑行
+                    网页小白
                 </div>
             </div>
 
@@ -93,13 +84,8 @@
                 <ul id="line">
                     <li>
                         <div class="focus"></div>
-                        <div>2024-1-27</div>
+                        <div>2024-8-18</div>
                         <div>敬请期待</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>2023-08-3</div>
-                        <div>ICP备案成功</div>
                     </li>
                     <li>
                         <div class="focus"></div>
@@ -108,18 +94,18 @@
                     </li>
                     <li>
                         <div class="focus"></div>
-                        <div>2021-02-08</div>
-                        <div>出来后洗心革面</div>
+                        <div>2024-08-17</div>
+                        <div>创建第一个个人网站</div>
                     </li>
                     <li>
                         <div class="focus"></div>
-                        <div>...</div>
-                        <div>...</div>
+                        <div>2024-06-16</div>
+                        <div>托管至CloudFlare</div>
                     </li>
                     <li>
                         <div class="focus"></div>
-                        <div>2018-01-06</div>
-                        <div>搭建第一个网站</div>
+                        <div>2024-06-15</div>
+                        <div>注册域名</div>
                     </li>
                 </ul>
             </div>
