--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="projectList">
                 <!-- 项目列表开始 -->
                 <!---->
-                <a class="projectItem" target="_blank" href="ghb.houheya.us.kg">
+                <a class="projectItem" target="_blank" href="https://ghb.houheya.us.kg">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
                         <h1>Github加速网站</h1>
@@ -299,7 +299,7 @@
                     <!-- 项目项结束 -->
                 </a>
                 <!---->
-                <a class="projectItem" target="_blank" href="gha.houheya.us.kg"">
+                <a class="projectItem" target="_blank" href="https://gha.houheya.us.kg"">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
                         <h1>Github镜像网站</h1>
