--- a/index.html
+++ b/index.html
@@ -89,11 +89,6 @@
                     </li>
                     <li>
                         <div class="focus"></div>
-                        <div>2023-7-3</div>
-                        <div>注册域名zyyo.net</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
                         <div>2024-08-17</div>
                         <div>创建第一个个人网站</div>
                     </li>
@@ -105,7 +100,7 @@
                     <li>
                         <div class="focus"></div>
                         <div>2024-06-15</div>
-                        <div>注册域名</div>
+                        <div>注册域名houheya.us.kg</div>
                     </li>
                 </ul>
             </div>
