--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </svg>
                     <div class="iconTip">Mail</div>
                 </a>
-                <a class="iconItem" onclick="wx('/static/img/wxzsm.jpg')" href="javascript:void(0)">
+                <a class="iconItem" onclick="wx('/static/img/wxzsm.png')" href="javascript:void(0)">
                     <svg t="1705247464964" class="icon" viewBox="0 0 1024 1024" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" p-id="4987" width="22px" height="22px">
                         <path
@@ -159,7 +159,7 @@
                     <div class="iconTip">赞助</div>
                 </a>
                 <!---->
-                <a class="iconItem" href="javascript:void(0)" onclick="wx('/static/img/wx.jpg')">
+                <a class="iconItem" href="javascript:void(0)" onclick="wx('/static/img/wx.png')">
                     <svg t="1705322844467" class="icon" viewBox="0 0 1024 1024" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" p-id="2925" width="22px" height="22px">
                         <path
