--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         <!-- 项目项结束 -->
                     </a>
                     <!---->
-                    <a class="projectItem" target="_blank" href="https://gha.houheya.us.kg"">
+                    <a class="projectItem" target="_blank" href="https://gh.houheya.us.kg"">
                     <!-- 项目项开始 -->
                     <div class=" projectItemLeft">
                         <h1>Github镜像网站</h1>
