--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <a class="iconItem" href="javascript:void(0)" onclick="wx('/static/img/wx.png')">
                         <svg t="1705322844467" class="icon" viewBox="0 0 450 550" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
-                            <path 
-                                d="M433.754 420.445c-11.526 1.393-44.86-52.741-44.86-52.741 0 31.345-16.136 72.247-51.051 101.786 16.842 5.192 54.843 19.167 45.803 34.421-7.316 12.343-125.51 7.881-159.632 4.037-34.122 3.844-152.316 8.306-159.632-4.037-9.045-15.25 28.918-29.214 45.783-34.415-34.92-29.539-51.059-70.445-51.059-101.792 0 0-33.334 54.134-44.859 52.741-5.37-.65-12.424-29.644 9.347-99.704 10.261-33.024 21.995-60.478 40.144-105.779C60.683 98.063 108.982.006 224 0c113.737.006 163.156 96.133 160.264 214.963 18.118 45.223 29.912 72.85 40.144 105.778 21.768 70.06 14.716 99.053 9.346 99.704z"/>
+                            <path
+                                d="M433.754 420.445c-11.526 1.393-44.86-52.741-44.86-52.741 0 31.345-16.136 72.247-51.051 101.786 16.842 5.192 54.843 19.167 45.803 34.421-7.316 12.343-125.51 7.881-159.632 4.037-34.122 3.844-152.316 8.306-159.632-4.037-9.045-15.25 28.918-29.214 45.783-34.415-34.92-29.539-51.059-70.445-51.059-101.792 0 0-33.334 54.134-44.859 52.741-5.37-.65-12.424-29.644 9.347-99.704 10.261-33.024 21.995-60.478 40.144-105.779C60.683 98.063 108.982.006 224 0c113.737.006 163.156 96.133 160.264 214.963 18.118 45.223 29.912 72.85 40.144 105.778 21.768 70.06 14.716 99.053 9.346 99.704z" />
                         </svg>
                         <div class="iconTip">QQ</div>
                     </a>
@@ -313,7 +313,18 @@
                     <img src="/static/img/i2.png" alt="">
                 </div>
                 <!-- 项目项结束 -->
+                <a class="projectItem" target="_blank" href="https://gg.houheya.us.kg">
+                    <!-- 项目项开始 -->
+                    <div class="projectItemLeft">
+                        <h1>Google镜像网站</h1>
+                        <p>不支持登录</p>
+                    </div>
+                    <div class="projectItemRight">
+                        <img src="/static/img/i3.png" alt="">
+                    </div>
+                    <!-- 项目项结束 -->
                 </a>
+            </a>
         </div>
         <div class="title">
             <svg t="1705257823317" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
