--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="iconTip">微信</div>
                     </a>
                     <!---->
-                    <a class="iconItem" href="javascript:void(0)" onclick="wx('/static/img/wx.png')">
+                    <a class="iconItem" href="javascript:void(0)" onclick="wx('/static/img/qq.jpg')">
                         <svg t="1705322844467" class="icon" viewBox="0 0 450 550" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
                             <path
